fixing some layout bugs

--- a/public/css/post.css
+++ b/public/css/post.css
@@ -67,17 +67,19 @@ ul {
 body{
     height: 100vh;
     width: 100vw;
-    background-image: url("../imgs/simon-daniel-fy6Gr1goL60-unsplash.jpg");
-    background-size: cover;
-    background-position: center;
 }
 
 .write-container{
+    background-image: url("../imgs/simon-daniel-fy6Gr1goL60-unsplash.jpg");
+    background-size: cover;
+    background-position: center;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
+    padding-top: 130px;
+    padding-bottom: 50px;
 }
 
 .write-container .box{
