--- a/public/css/style.css
+++ b/public/css/style.css
@@ -134,7 +134,7 @@ ul {
 
 @media (max-width: 750px){
     .hero h1{
-        font-size: 65px;
+        font-size: 45px;
     }
     .hero p{
         font-size: 22px;
